--- a/AsoZero/index.html
+++ b/AsoZero/index.html
@@ -77,7 +77,7 @@
     </nav>
 
     <!-- Header -->
-    <header>
+    <header v-bind:style="{ backgroundImage: 'url(' + configuracion.imagen_principal + ')' }">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
