--- a/AsoZero/index.html
+++ b/AsoZero/index.html
@@ -306,6 +306,10 @@
                                         <strong><a href="http://startbootstrap.com">{{ item.objetivo }}€</a>
                                         </strong>
                                     </li>
+                                    <li v-else>Objetivo:
+                                        <strong><a href="http://startbootstrap.com">Dar en adopcion</a>
+                                        </strong>
+                                    </li>
                                     <li v-if="item.fecha">Fecha:
                                         <strong><a href="http://startbootstrap.com">{{ item.fecha }}</a>
                                         </strong>
