--- a/AsoZero/index.html
+++ b/AsoZero/index.html
@@ -263,8 +263,8 @@
                             <div class="modal-body">
                                 <h2>{{ item.nombre }}</h2>
                                 <hr class="star-primary">
-                                <div class="caso-imagenes-row" v-if="item.imagen1">
-                                    <div class="caso-imagen caso-imagen_principal">
+                                <div class="caso-imagenes-row" v-if="item.imagen_principal">
+                                    <div class="caso-imagen caso-imagen1">
                                         <img v-bind:src="item.imagen_principal" class="img-responsive img-centered" alt="">
                                     </div>
                                     <div class="caso-imagen caso-imagen2">
