--- a/AsoZero/index.html
+++ b/AsoZero/index.html
@@ -173,7 +173,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#contact" class="btn btn-lg btn-outline">
-                        <i class="fa fa-envelope-o"></i> Contacta con nosotros
+                        <i class="fa fa-envelope-o"></i> Únete a nuestro equipo
                     </a>
                 </div>
             </div>
