- 2 new sections: Protocol Adoption & HappyEnding Cats

--- a/AsoZero/index.html
+++ b/AsoZero/index.html
@@ -166,7 +166,7 @@
                 </div>
             </div>
             <div class="row" v-if="configuracion.teaming_parrafo_1">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-lg-8 col-lg-offset-2">
                     <div v-html="configuracion.teaming_parrafo_1"></div>
                 </div>
             </div>
