--- a/AsoZero/index.html
+++ b/AsoZero/index.html
@@ -57,10 +57,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
+                        <a href="#about">¿Quienes Somos?</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#sickcat">Casos</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">¿Quienes Somos?</a>
+                        <a href="#teaming">Hazte Teaming</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#happy-ending">Finales Felices</a>
