--- a/AsoZero/index.html
+++ b/AsoZero/index.html
@@ -65,12 +65,12 @@
                     <li class="page-scroll">
                         <a href="#teaming">Hazte Teaming</a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="#happy-ending">Finales Felices</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#adoption-protocol">Adopción</a>
-                    </li>
+{#                    <li class="page-scroll">#}
+{#                        <a href="#happy-ending">Finales Felices</a>#}
+{#                    </li>#}
+{#                    <li class="page-scroll">#}
+{#                        <a href="#adoption-protocol">Adopción</a>#}
+{#                    </li>#}
                     <li class="page-scroll">
                         <a href="#contact">Contacto</a>
                     </li>
