- URL teaming in configuration panel

--- a/AsoZero/index.html
+++ b/AsoZero/index.html
@@ -175,7 +175,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#contact" class="btn btn-lg btn-outline">
+                    <a v-bind:href="configuracion.teaming_link" class="btn btn-lg btn-outline">
                         <i class="fa fa-envelope-o"></i> Únete a nuestro equipo
                     </a>
                 </div>
