--- a/AsoZero/index.html
+++ b/AsoZero/index.html
@@ -67,12 +67,12 @@
                     </li>
                     <!--li class="page-scroll">
                         <a href="#happy-ending">Finales Felices</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#adoption-protocol">Adopción</a>
                     </li-->
                     <li class="page-scroll">
                         <a href="#contact">Contacto</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#adoption-protocol">Adopción</a>
                     </li>
                     <li>
                         <a v-bind:href="configuracion.paypal_url"><i class="fa fa-credit-card"></i> Ayudanos</a>
@@ -233,6 +233,23 @@
                             </div>
                         </div>
                     </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Adopcion Section -->
+    <section class="success" id="adoption-protocol">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Protocolo de Adopción</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row" v-if="configuracion.protocolo_parrafo_1">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div v-html="configuracion.protocolo_parrafo_1"></div>
                 </div>
             </div>
         </div>
