- Tildes en 'Ayudanos'

--- a/AsoZero/index.html
+++ b/AsoZero/index.html
@@ -75,7 +75,7 @@
                         <a href="#adoption-protocol">Adopción</a>
                     </li>
                     <li>
-                        <a v-bind:href="configuracion.paypal_url"><i class="fa fa-credit-card"></i> Ayudanos</a>
+                        <a v-bind:href="configuracion.paypal_url"><i class="fa fa-credit-card"></i> Ayúdanos</a>
                     </li>
                 </ul>
             </div>
@@ -92,8 +92,8 @@
                     <div class="intro-text">
                         <img class="img-responsive" src="img/logo.jpg" alt="">
                         <span class="name">Asociación CERO</span>
-                        <span class="skills">Ayudanos a salvar sus vidas</span>
-                        <span class="intro-btn"><a v-bind:href="configuracion.paypal_url" class="btn btn-primary btn-lg btn-outline"><i class="fa fa-credit-card"></i>  Ayudanos!</a></span>
+                        <span class="skills">Ayúdanos a salvar sus vidas</span>
+                        <span class="intro-btn"><a v-bind:href="configuracion.paypal_url" class="btn btn-primary btn-lg btn-outline"><i class="fa fa-credit-card"></i>  Ayúdanos!</a></span>
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a v-bind:href="configuracion.paypal_url" class="btn btn-warning btn-lg btn-outline">
-                        <i class="fa fa-credit-card"></i> Ayudanos!
+                        <i class="fa fa-credit-card"></i> Ayúdanos!
                     </a>
                     <a href="#contact" class="btn btn-lg btn-outline">
                         <i class="fa fa-envelope-o"></i> Contacta con nosotros
