--- a/AsoZero/index.html
+++ b/AsoZero/index.html
@@ -255,6 +255,23 @@
         </div>
     </section>
 
+    <!-- Ayudanos Section -->
+    <section id="ayudanos">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Ayúdanos</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row" v-if="configuracion.ayudanos_parrafo">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div v-html="configuracion.ayudanos_parrafo"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="text-center">
         <div class="footer-above">
