- CKEditor added links - Frontend changes

--- a/AsoZero/index.html
+++ b/AsoZero/index.html
@@ -74,9 +74,13 @@
                     <li class="page-scroll">
                         <a href="#adoption-protocol">Adopción</a>
                     </li>
-                    <li>
-                        <a v-bind:href="configuracion.paypal_url"><i class="fa fa-credit-card"></i> Ayúdanos</a>
                     </li>
+                    <li class="page-scroll">
+                        <a href="#ayudanos">Adopción</a>
+                    </li>
+                    <!--li>
+                        <a v-bind:href="configuracion.paypal_url"><i class="fa fa-credit-card"></i> Ayúdanos</a>
+                    </li-->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
