- Ayudanos footer Migration

--- a/AsoZero/index.html
+++ b/AsoZero/index.html
@@ -283,7 +283,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Ayúdanos</h3>
-                        <p>Paypal</p>
+                        <div v-html="configuracion.ayudanos_footer"></div>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>En la Web</h3>
